# mathlib

./: Atffile  LICENSE  Makefile  TODO  config.h  configure.ac  foo.c  go.dead.sh  go.macbeth.sh  subr_atf.c  subr_atf.h  subr_combinatorics.c  subr_errhandling.c  subr_errhandling.h  subr_fpcmp.c  subr_fpcmp.h  subr_random.c  subr_random.h  t_acos.c  t_acosh.c  t_asin.c  t_asinh.c  t_atan.c  t_atan2.c  t_atanh  t_atanh.c  t_cbrt.c  t_ceil.c  t_constants.c  t_copysign.c  t_cos.c  t_cosh.c  t_erf.c  t_erfc.c  t_exp.c  t_exp.h  t_exp2.c  t_expm1.c  t_fabs.c  t_fdim.c  (+43 more)
autom4te.cache/: output.0  traces.0
complex/: Atffile  Makefile  t_cabs.c  t_cacos.c  t_cacosh.c  t_carg.c  t_casin.c  t_casinh.c  t_catan.c  t_catanh.c  t_cimag.c  t_clog.c  t_conj.c  t_cproj.c  t_creal.c  t_csqrt.c  t_imgconstant.c
etc/: Makefile  TODO  csv2plot.sh  dumpfenv.c  goodgen.c  gsoc.asc  opensolaris.ulps.asc  proffenv.c  profmath.c  profsetenv.c  realgen.c  self.c  testrand.c  testrand2.c  upload-to-dead.sh  x86_dumpfenv.c  x86_dumpfenv.h
fenv/: Makefile  Makefile.old  README  t_extern.cpp  t_fe_dfl_env.c  t_feclearexcept.c  t_fegetexceptflag.c  t_fegetround.c  t_feholdexcept  t_feholdexcept.c  t_fenv.c  t_feraiseexcept.c  t_fesetenv.c  t_fesetexceptflag.c  t_fesetround.c  t_fexcept.c  t_ieeefp.c  t_overrun.c  t_thread.c
include/: config.h  config.h.in  lconstants.h  mytypes.h  subr_atf.h  subr_combinatorics.h  subr_errhandling.h  subr_fpclassify.h  subr_fpcmp.h  subr_mpc.h  subr_random.h  t_acos.h  t_acosh.h  t_atan.h  t_cos.h  t_erfc.h  t_exp2.h  t_hypot.h  t_log10.h  t_log2.h  t_nextafter.h  t_sin.h  t_sinh.h  t_sqrt.h  t_tgamma.h
math/: Atffile  Makefile  t_acos.c  t_acosh.c  t_asin.c  t_atan.c  t_atan2.c  t_atanh.c  t_ceil.c  t_constants.c  t_copysign.c  t_cos.c  t_erf.c  t_erfc.c  t_exp.c  t_exp2.c  t_expm1.c  t_fabs.c  t_fdim.c  t_float.c  t_floor.c  t_fma.c  t_fmax.c  t_frexp.c  t_hypot.c  t_ilogb.c  t_ldexp.c  t_llround.c  t_log.c  t_log10.c  t_log1p.c  t_log2.c  t_logb.c  t_lrint.c  t_lround.c  t_mac.c  t_modf.c  t_nextafter.c  t_pow.c  t_remainder.c  (+14 more)
math/include/: t_asin.h  t_asinh.h  t_atan2.h  t_atanh.h  t_cbrt.h  t_cosh.h  t_exp.h  t_expm1.h  t_log.h  t_log1p.h  t_pow.h  t_remainder.h  t_tan.h  t_tanh.h
report/: gsoc.asc  ulps.asc  ulps.notes
report/files/: graphs.tgz  logs.tgz
report/files/logs/Darwin/10.2.0/i386/: results-14-01-11.html
report/files/logs/FreeBSD/8.0-RELEASE/i386/: results-06-07-10.html  results-27-06-10.html
report/files/logs/Linux/2.6.32-5-686/i686/: results-05-07-10.html  results-06-07-10.html  results-13-01-11.html  results-14-07-10.html
report/files/logs/Linux/2.6.33-ARCH/i686/: results-04-06-10.html
report/files/logs/Linux/2.6.34-ARCH/i686/: results-03-07-10.html  results-15-08-10.html  results-23-08-10.html  results-25-06-10.html  results-26-06-10.html
report/files/logs/NetBSD/5.99.29/amd64/: results-06-07-10.html  results-26-05-10.html
report/files/logs/NetBSD/5.99.29/i386/: results-13-06-10.html  results-30-06-10.html  results-errexcept-30-06-10.html  results-errno-30-06-10.html
report/files/logs/NetBSD/5.99.32/sparc64/: results-27-06-10.html
report/files/logs/NetBSD/5.99.33/i386/: results-10-07-10.html  results-14-08-10.html  results-16-08-10.html
report/files/logs/NetBSD/5.99.44/i386/: results-01-02-11.html  results-02-02-11.html  results-02-05-11.html
report/files/logs/NetBSD/5.99.45/sparc64/: results.html
report/files/logs/SunOS/5.11/i86pc/: results-01-07-10.html  results-03-07-10.html  results-04-06-10.html  results-05-07-10.html  results-06-07-10.html  results-07-06-10.html  results-07-08-10.html  results-08-07-10.html  results-09-06-10.html  results-09-07-10.html  results-10-07-10.html  results-11-06-10.html  results-13-01-11.html  results-13-08-10.html  results-15-08-10.html  results-18-06-10.html  results-20-06-10.html  results-25-05-10.html  results-25-06-10.html  results-25-07-10.html  results-26-06-10.html  results-27-05-10.html  results-29-07-10.html
scripts/: go.thirdstage.sh  upload-to-dead.sh  upload-to-leaf.sh  upload-to-macbeth.sh  upload-to-thirdstage.sh
ulps/: Makefile  Makefile.am  Makefile.in  basic-complex.c  basic-complex.h  config.h.in  configure  configure.ac  configure.in  configure.in.old  gen.c  gen.h  main.c  subr_mpc.c  ulp.c  ulp.h  ulp_complex.c  ulp_real.c
